--- a/package.json
+++ b/package.json
@@ -6,15 +6,29 @@
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev --transpile-only src/index.ts"
+    "start": "ts-node-dev --transpile-only src/index.ts",
+    "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint-fix": "eslint --fix",
+    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "lint-prettier": "yarn lint:check && yarn prettier:check"
+  },
+  "lint-staged": {
+    "src/**/*.ts": "yarn lint-prettier"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eslint": "^8.52.0",
     "express": "^4.18.2",
     "http-status": "^1.7.3",
     "mongoose": "^7.6.3",
