--- a/.eslintrc
+++ b/.eslintrc
@@ -14,11 +14,45 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/explicit-module-boundary-types": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "no-unused-vars": "error",
+    "prefer-const": "error",
+    // "no-unused-expressions": "warn",
+    "no-undef": "error",
+    // "no-console": "warn",
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"],
+    "no-var": "error",
+    "prefer-arrow-callback": "error",
+    "arrow-spacing": "error",
+    // "space-before-function-paren": ["error", "never"],
+    "space-before-function-paren": [
+      "error",
+      {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+      }
+    ],
+    "object-shorthand": "error",
+    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+    "comma-dangle": ["error", "always-multiline"],
+    "space-infix-ops": "error",
+    "space-unary-ops": "error",
+    "max-len": ["error", { "code": 120 }],
+    "func-names": "error",
+    "consistent-return": "error"
   },
 
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
