--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "local-start": "ts-node-dev --respawn --transpile-only server.ts",
+    "local-start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "main": "dist/index.js",
     "start": "node dist/index.js",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
