--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "src/**/*.ts": "yarn lint-prettier"
   },
   "dependencies": {
+    "@types/multer": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "express": "^4.18.2",
     "http-status": "^1.7.3",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0"
   }
 }
