--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["node_modules"], // which files to skip
 
   "compilerOptions": {
+    "types": ["express" /* other types */],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
