--- a/.eslintrc
+++ b/.eslintrc
@@ -29,21 +29,21 @@
     "prefer-arrow-callback": "error",
     "arrow-spacing": "error",
     // "space-before-function-paren": ["error", "never"],
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "never",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
+    // "space-before-function-paren": [
+    //   "error",
+    //   {
+    //     "anonymous": "always",
+    //     "named": "always",
+    //     "asyncArrow": "always"
+    //   }
+    // ],
     "object-shorthand": "error",
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "comma-dangle": ["error", "always-multiline"],
     "space-infix-ops": "error",
     "space-unary-ops": "error",
     "max-len": ["error", { "code": 120 }],
-    "func-names": "error",
+    "func-names": "warn",
     "consistent-return": "error"
   },
 
